src/test/resources/Parser/SyntaxErrors/CyclicDelegate2.front
class A:
    delegate * : b: B;
class B:
    delegate * : c: C;
class C:
    delegate * : a: A;